src/loadext.zig

extern fn sqlite3_value_free() callconv(.c) void;
extern fn sqlite3_value_frombind() callconv(.c) void;
extern fn sqlite3_value_int() callconv(.c) void;
extern fn sqlite3_value_int64() callconv(.c) void;
extern fn sqlite3_value_nochange() callconv(.c) void;
extern fn sqlite3_value_numeric_type() callconv(.c) void;
extern fn sqlite3_value_pointer() callconv(.c) void;
extern fn sqlite3_value_subtype() callconv(.c) void;
extern fn sqlite3_value_text() callconv(.c) void;
extern fn sqlite3_value_text16() callconv(.c) void;
extern fn sqlite3_value_text16be() callconv(.c) void;
extern fn sqlite3_value_text16le() callconv(.c) void;
extern fn sqlite3_value_type() callconv(.c) void;
extern fn sqlite3_vfs_find() callconv(.c) void;
extern fn sqlite3_vfs_register() callconv(.c) void;
extern fn sqlite3_vfs_unregister() callconv(.c) void;
extern fn sqlite3_vmprintf() callconv(.c) void;
extern fn sqlite3_vsnprintf() callconv(.c) void;
extern fn sqlite3_vtab_collation() callconv(.c) void;
extern fn sqlite3_vtab_config() callconv(.c) void;
extern fn sqlite3_vtab_distinct() callconv(.c) void;
extern fn sqlite3_vtab_in() callconv(.c) void;
extern fn sqlite3_vtab_in_first() callconv(.c) void;
extern fn sqlite3_vtab_in_next() callconv(.c) void;
extern fn sqlite3_vtab_nochange() callconv(.c) void;
extern fn sqlite3_vtab_on_conflict() callconv(.c) void;
extern fn sqlite3_vtab_rhs_value() callconv(.c) void;
extern fn sqlite3_wal_autocheckpoint() callconv(.c) void;
extern fn sqlite3_wal_checkpoint() callconv(.c) void;
extern fn sqlite3_wal_checkpoint_v2() callconv(.c) void;
extern fn sqlite3_wal_hook() callconv(.c) void;
